--- a/README
+++ b/README
@@ -1,3 +1,2 @@
 This is a Bundle file for Slash, the code that runs Slashdot.  See
-http://slashcode.com/ or http://www.sourceforge.net/projects/slashcode/
-for more information.
+http://slashcode.com/ for more information.
